# stqdm

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  mise.toml  noxfile.py  pyproject.toml  renovate.json
.github/CodeQL/: codeql-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bump-version.yml  codeql-analysis.yml  create-release.yml  release-drafter.yml  renovate.yml  scorecard.yml  tests.yml  update_dependencies.yml  wake-demo.yml
.github/workflows/actions/: install_dependencies.yml
.github/workflows/actions/create_auto_merge_pr/: action.yml
.github/workflows/actions/install_dependencies/: action.yml
.github/workflows/actions/run_nox_session/: action.yml
commands/: list_nox_manifest.py  utils.py
demo/: FEATURES.md
demo/app/: Home.py
demo/app/pages/: 1_🎬_STqdm_in_main.py
demo/src/: demo_apps.py  utils.py
examples/: bugs_with_concatenated_iterator.py  stqdm_backend_frontend.py  stqdm_format.py  stqdm_in_columns.py  stqdm_in_main.py  stqdm_in_main_nested.py  stqdm_in_sidebar.py  stqdm_leave.py  stqdm_multi_bars_in_columns.py  stqdm_no_total_no_length.py  stqdm_pandas.py  stqdm_patch_tqdm.py  stqdm_stop_and_retry.py  stqdm_while_loop.py  stqdm_with_caching_and_speed.py  stqdm_with_generator.py
stqdm/: __init__.py  asyncio.py  auto.py  configuration_manager.py  stqdm.py  types.py
tests/: test_configuration_manager.py  test_streamlit_apps.py  test_streamlit_browser.py  test_streamlit_frontend.py
