[project]
name = "stqdm"
version = "0.0.5"
description = "Easy progress bar for streamlit based on the awesome streamlit.progress and tqdm"
authors = [{ name = "Wirg", email = "Wirg@users.noreply.github.com" }]
maintainers = [{ name = "Wirg", email = "Wirg@users.noreply.github.com" }]
license = { text = "Apache License 2.0" }
keywords = ["streamlit", "progressbar", "progressmeter", "progress", "bar", "meter", "rate", "eta", "tqdm"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "streamlit>=1.29.0",
    "tqdm>=4.61",
]

[project.urls]
Homepage = "https://github.com/Wirg/stqdm"
Repository = "https://github.com/Wirg/stqdm"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "freezegun>=1.5.1",
    "hatch>=1.14.0",
    "isort>=5.13.2",
    "mypy>=1.14.0",
    "nox>=2024.10.9",
    "packaging>=1.16",
    "pre-commit>=4.0.1",
    "pylint>=3.3.3",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "types-tqdm>=4.66.0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["stqdm"]

[tool.black]
line-length = 127
target-version = ['py310', 'py311']

[tool.isort]
py_version=39
profile = "black"
multi_line_output = 3
skip_gitignore = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "demo_app:Test a streamlit app directly with AppTest"
]

[tool.coverage.run]
omit = [".nox/*"]

[tool.pylint.main]
ignore-paths = [".nox/"]

[tool.pylint.messages_control]
disable = [
    "ungrouped-imports", # already managed by isort
    "wrong-import-order",
    "wrong-import-position",
    "missing-module-docstring",
    "missing-class-docstring",
    "no-member",
    "too-few-public-methods",
    "too-many-instance-attributes"
]

[tool.pylint.basic]
max-line-length=140
docstring-min-length=15
max-args = 6
no-docstring-rgx = "^_|^test_|^Test[A-Z]" # no docstrings for tests

[tool.pylint.miscellaneous]
notes = ["FIXME"]

[tool.pylint.similarities]
ignore-signatures = "yes"
ignore-imports = "yes"
min-similarity-lines = 8

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
