[project]
name = "stqdm"
version = "0.0.5"
description = "Easy progress bar for streamlit based on the awesome streamlit.progress and tqdm"
authors = [{ name = "Wirg", email = "Wirg@users.noreply.github.com" }]
maintainers = [{ name = "Wirg", email = "Wirg@users.noreply.github.com" }]
license = { text = "Apache License 2.0" }
keywords = ["streamlit", "progressbar", "progressmeter", "progress", "bar", "meter", "rate", "eta", "tqdm"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "streamlit>=1.41.0",
    "tqdm>=4.66.0",
]

[project.urls]
Homepage = "https://github.com/Wirg/stqdm"
Repository = "https://github.com/Wirg/stqdm"
Issues = "https://github.com/Wirg/stqdm/issues"
Changelog = "https://github.com/Wirg/stqdm/releases"

[dependency-groups]
dev = [
    "check-wheel-contents>=0.6.3",
    "commitizen>=4.16.2",
    "freezegun>=1.5.4",
    "hatch>=1.16.5",
    "mypy>=2.1.0",
    "nox>=2026.4.10",
    "packaging>=26.0",
    "pre-commit>=4.6.0",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "twine>=6.2.0",
    "types-tqdm>=4.67.3.20260508",
]

[tool.hatch.build.targets.wheel]
packages = ["stqdm"]

[tool.ruff]
line-length = 127
target-version = "py311"

[tool.ruff.lint]
select = ["I"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
version_scheme = "pep440"
tag_format = "v$version"
major_version_zero = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "demo_app:Test a streamlit app directly with AppTest",
]

[tool.coverage.run]
omit = [".nox/*"]

[tool.pylint.main]
ignore-paths = [".nox/"]

[tool.pylint.messages_control]
disable = [
    "ungrouped-imports", # already managed by isort
    "wrong-import-order",
    "wrong-import-position",
    "missing-module-docstring",
    "missing-class-docstring",
    "no-member",
    "too-few-public-methods",
    "too-many-instance-attributes"
]

[tool.pylint.basic]
max-line-length=140
docstring-min-length=15
max-args = 6
no-docstring-rgx = "^_|^test_|^Test[A-Z]" # no docstrings for tests

[tool.pylint.miscellaneous]
notes = ["FIXME"]

[tool.pylint.similarities]
ignore-signatures = "yes"
ignore-imports = "yes"
min-similarity-lines = 8

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
